# cuYURI

./: CMakeLists.txt  GPU.info  GPU_.info  Globals.h  README  SdkConsoleLog.txt  SdkMasterLog.csv  Test_2D_SQUARE.cpp  Test_2D_SQUARE.h  Testing.cpp  Testing.h  add_1D.cpp  add_1D.h  add_2D.cpp  add_2D.h  app.cpp  app.h  arr_1D.cpp  arr_1D.h  arr_2D_FLAT.cpp  arr_2D_FLAT.h  arr_2D_SQUARE.cpp  arr_2D_SQUARE.h  arrayAddition_1D.cpp  arrayAddition_1D.h  array_1D.cpp  array_1D.h  bench.cpp  bench.h  benchFile.cpp  benchFile.h  configGPU.cpp  configGPU.h  cuArray_1D.cpp  cuArray_1D.cu  cuArray_1D.h  cuInterface.cu  cuKernel.cu  cuShared.h  cuTest.cpp  (+68 more)
Array/Real/: Array.cpp  Array.h
Benchmarking/cuFFTShift_2D/: CMakeLists.cmake  iB_Complex_FFTShift_2D.cpp  iB_Real_FFTShift_2D.cpp
CMake/: CPackConfig.cmake  FindBoost_Local.cmake  FindCUDA_Local.cmake  FindCg.cmake  FindDICOM.cmake  FindImageMagick_Local.cmake  Find_Boost.cmake  Find_CUDA.cmake  Find_CUDA_SDK.cmake  Find_Cg.cmake  Find_Cocoa.cmake  Find_FFTW.cmake  Find_GLEW.cmake  Find_GLUT.cmake  Find_ImageMagick.cmake  Find_OpenGL.cmake  Find_OpenMP.cmake  Find_X11.cmake  Includes.cmake
CUDA/: cuDataTransfer_1D_Array.cpp  cuExterns.cu  cuExterns.h  cuFillArray.cu  cuGlobals.h  cuIncludes.h  cuKernelConf.cpp  cuKernelConf.h  cuKernels.cmake  cuMemory_1D_Array.cpp  cuUtilities.h  cuYURI_Interfaces.h  cuYURI_Interfaces.h~  cu_Globals.h  cu_Kernels.cmake  cu_Utilities.cpp  cu_Utilities.h
CUDA/Interfaces/: Add_1D_Arrays.h  Add_1D_Arrays_Impl.cu  Constant_Add_1D_Array.h  Constant_Add_1D_Array_Impl.cu  Constant_Divide_1D_Array.h  Constant_Divide_1D_Array_Impl.cu  Constant_Multiply_1D_Array.h  Constant_Multiply_1D_Array_Impl.cu  Constant_Subtract_1D_Array.h  Constant_Subtract_1D_Array_Impl.cu  Copy_1D_Array.h  Copy_1D_Array_Device.h  Copy_1D_Array_Device_Impl.cu  Copy_1D_Array_Impl.cu  Divide_1D_Arrays.h  Divide_1D_Arrays_Impl.cu  Fill_1D_Array.h  Fill_1D_Array_Impl.cu  Fill_1D_Array_Normalized.h  Fill_1D_Array_Normalized_Impl.cu  Fill_1D_Array_RND.h  Fill_1D_Array_RND_Impl.cu  Multiply_1D_Arrays.h  Multiply_1D_Arrays_Impl.cu  Subtract_1D_Arrays.h  Subtract_1D_Arrays_Impl.cu
CUDA/Kernels/: Add_1D_Arrays_Kernel.cu  Constant_Add_1D_Array_Kernel.cu  Constant_Divide_1D_Array_Kernel.cu  Constant_Multiply_1D_Array_Kernel.cu  Constant_Subtract_1D_Array_Kernel.cu  Copy_1D_Array_Device_Kernel.cu  Copy_1D_Array_Kernel.cu  Divide_1D_Arrays_Kernel.cu  Fill_1D_Array_Kernel.cu  Fill_1D_Array_Normalized_Kernel.cu  Fill_1D_Array_RND_Kernel.cu  Fill_1D_Array_SEQ_Kernel.cu copy  Multiply_1D_Arrays_Kernel.cu  Subtract_1D_Array_Kernel.cu  copy  Subtract_1D_Arrays_Kernel.cu
CUDA/Math/: Math.cu~  cuMath.cu
CUDA/Memory/: cuDataTransfer_1D_Array.cpp  cuDataTransfer_1D_Array.h  cuMemory_1D_Array.cpp  cuMemory_1D_Array.h
CUDA/Temp/: cuUtilities.cpp
CUDA/Utilities/: cuGPUConf.cpp  cuGPUConf.h  cuKernelConf.cpp  cuKernelConf.h  cuUtilities.cpp  cuUtilities.h  cuUtils.cpp  cuUtils.h
Data/: LadyModified  LenaModified  RayCastingShader.cg  VolumeRenderPyramidF.cg  VolumeRenderPyramidF.ocg  VolumeRenderPyramidV.cg  raycasting_shader.cg
Debug/: BuildLog.htm  mt.dep  vc90.idb
Dependencies/Excel/: CMakeLists.txt  CMakeLists.txt~
Examples/Add_1D_Arrays/: CMakeLists.cmake~  Run.cpp  ex_Add_1D_Arrays.cpp  ex_Add_1D_Arrays.h
Examples/CombineImageGL/: CMakeLists.cmake  CMakeLists.cmake~  Run.cpp  ex_CombineImageGL.cpp  ex_CombineImageGL.h
Examples/CreateXLDocument/: CMakeLists.cmake  Run.cpp  ex_CreateXLDocument.cpp  ex_CreateXLDocument.h
Examples/DisplayArrayGL/: CMakeLists.cmake  CMakeLists.cmake~  Run.cpp  ex_DisplayArrayGL.cpp  ex_DisplayArrayGL.h
Examples/DisplayGPUArrayGL/: CMakeLists.cmake  Run.cpp  ex_DisplayGPUArrayGL.cpp  ex_DisplayGPUArrayGL.h
Examples/DisplayImageGL/: CMakeLists.cmake  Run.cpp  ex_DisplayImageGL.cpp  ex_DisplayImageGL.h
Examples/FillArrayRND/: CMakeLists.cmake  Run.cpp  ex_FillArrayRND.cpp  ex_FillArrayRND.h
Examples/GPUCombineDisplayImageGL/: CMakeLists.cmake  Run.cpp  ex_GPUCombineDisplayImageGL.cpp  ex_GPUCombineDisplayImageGL.h
Examples/GPUConstantOperations/: CMakeLists.cmake  Run.cpp  ex_GPUConstantOperations.cpp  ex_GPUConstantOperations.h
Examples/SimpleDisplayImageGL/: CMakeLists.cmake  Run.cpp  ex_SimpleDisplayImageGL.cpp  ex_SimpleDisplayImageGL.h
Examples/VolumeRayCaster/: CMakeLists.cmake  Run.cpp  ex_VolumeRayCaster.cpp  ex_VolumeRayCaster.h  raycasting_shader.cg
Examples/VolumeSlicer/: CMakeLists.cmake  CMakeLists.cmake~  Run.cpp  ex_VolumeSlicer.cpp  ex_VolumeSlicer.h
FourierVolumeRenderer/: CMakeLists.cmake
FourierVolumeRenderer/src/: eFourierVolRen.cpp  runEngine.cpp
Image/: Image.cpp
Logging/: Logging.cpp  Logging.h
MACROS/: LoggingMACROS.h  MACROS.h  MemoryMACROS.h  MessagingMACROS.h
Magick/: Image.cpp  Image.h
Memory/: FlatImage.h  FlatImage.hpp  FlatVolume.cpp  FlatVolume.h  FlatVolume.hpp  Image.h  Image.hpp  Memory_1D.cpp  Memory_1D.h  Memory_2D.cpp  Memory_2D.h  Memory_3D.cpp  Memory_3D.h  Vector.h  Vector.hpp  Volume.h  Volume.hpp
OpenGL/: Cg.cpp  Cg.h  GLEW.cpp  GLEW.h  GLUT.cpp  GLUT.h  GL_Includes.h  Glut.cpp  Glut.h  OpenGL.cpp  OpenGL.h  RayCaster.cpp  RayCaster_GL.cpp  RayCaster_GL.h  ShadedVolumeSlicer.cpp  ShadedVolumeSlicer.h  ShadedVolumeSlicer_4D.cpp  ShadedVolumeSlicer_4D.h  SimpleVolumeSlicer.cpp  SimpleVolumeSlicer.h  VolumeRayCaster.cpp  VolumeRayCaster.h
Timers/: Boost.cpp  Boost.h  CUDA.cpp  CUDA.h  CUDATimers.h  TimerIncludes.h
Utilities/: MACROS.h  Memory.cpp  Memory.h  MemoryMACROS.h  Memory_1D.cpp  Memory_1D.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  TypeConversion.cpp  TypeConversion.h  Typedefs.h  Utils.cpp  Utils.h
Volume/: Loader.cpp  Loader.h  TestVolume.cpp  Vector3.h  Volume.cpp  Volume.h
doc/: CMakeLists.txt  CMakeLists.txt~  documentation-config.doxygen.in  documentation-config.doxygen.in~  release-notes.dox  release-notes.dox~  technical-overview.dox  technical-overview.dox~  user-guide.dox  welcome.dox
projectTemplate/: projectTemplate.cu  projectTemplate_gold.cpp  projectTemplate_kernel.cu  runSample.cpp
(+60 files in other folders)
